[project]
name = "nano-verl"
version = "0.1.0"
description = "minimal implementation of verl"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensordict>=0.12.4",
    "torch==2.11",
    "vllm>=0.21.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nano_verl"]
